# starlette-session-middleware

./: .bumpversion.cfg  .gitignore  .mypy.ini  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci-cd.yml  continuous-delivery.yml  continuous-integration.yml
src/starlette_session/middleware/: __init__.py  session.py
src/starlette_session/middleware/authorizationbackends/: __init__.py  authorizationheader.py  base.py  cookie.py
src/starlette_session/middleware/codecbackends/: __init__.py  base.py  jwt.py  signer.py
src/starlette_session/middleware/storagebackends/: __init__.py  base.py  cookie.py
tests/middleware/: test_session.py
tests/middleware/authorizationbackends/: test_authorizationheader.py  test_cookie.py  test_interface.py
tests/middleware/codecbackends/: test_codecbackendinterface.py  test_jwt.py  test_signer.py
tests/middleware/storagebackends/: test_cookiestoragebackend.py  test_storagebackendinterface.py
