[project]
name = "starlette-session-middleware"
version = "0.1.0"
readme = "README.md"
dependencies = [
    "starlette ~= 0.35",
    "typing_extensions>=3.10.0; python_version < '3.10'",
]

[project.optional-dependencies]
itsdangerous = ["itsdangerous~=2.1"]
jwt = ["PyJWT~=2.8"]

[build-system]
# setuptools is constrained to >=65.5.1 to avoid https://www.cve.org/CVERecord?id=CVE-2022-40897
requires = ["setuptools>=65.5.1", "wheel", "isort"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"starlette_session.middleware" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
